/*
 * This file was automatically generated by EvoSuite
 * Tue Dec 04 01:21:16 GMT 2018
 */

package system.model.quizzes;

import org.junit.Test;
import static org.junit.Assert.*;
import org.evosuite.runtime.EvoRunner;
import org.evosuite.runtime.EvoRunnerParameters;
import org.junit.runner.RunWith;
import system.model.QuizGroupType;

@RunWith(EvoRunner.class) @EvoRunnerParameters(mockJVMNonDeterminism = true, useVFS = true, useVNET = true, resetStaticState = true, separateClassLoader = true, useJEE = true) 
public class QuizGroup_ESTest extends QuizGroup_ESTest_scaffolding {

  @Test(timeout = 4000)
  public void test00()  throws Throwable  {
      Object object0 = QuizGroup.__CLR4_1_214y14yjp8v55pt.lambdaInc(2541, (Object) "aH0w%Uk%i0tpvET{'", 2541);
      assertNotNull(object0);
  }

  @Test(timeout = 4000)
  public void test01()  throws Throwable  {
      QuizGroup.__CLR4_1_214y14yjp8v55pt quizGroup___CLR4_1_214y14yjp8v55pt0 = new QuizGroup.__CLR4_1_214y14yjp8v55pt();
  }

  @Test(timeout = 4000)
  public void test02()  throws Throwable  {
      QuizGroup quizGroup0 = new QuizGroup();
      quizGroup0.getType();
  }

  @Test(timeout = 4000)
  public void test03()  throws Throwable  {
      QuizGroupType quizGroupType0 = QuizGroupType.CAT;
      QuizGroup quizGroup0 = new QuizGroup("A3", quizGroupType0, "", "A3", "");
      String string0 = quizGroup0.getTeacher();
      assertEquals("A3", string0);
  }

  @Test(timeout = 4000)
  public void test04()  throws Throwable  {
      QuizGroupType quizGroupType0 = QuizGroupType.CAT;
      QuizGroup quizGroup0 = new QuizGroup("Sad][>hl-KF*", "aH0w%Uk%i0tpvET{'", "Sad][>hl-KF*", "aH0w%Uk%i0tpvET{'", "", quizGroupType0);
      String string0 = quizGroup0.getName();
      assertEquals("", string0);
  }

  @Test(timeout = 4000)
  public void test05()  throws Throwable  {
      QuizGroupType quizGroupType0 = QuizGroupType.CAT;
      QuizGroup quizGroup0 = new QuizGroup("A3", quizGroupType0, "", "A3", "");
      quizGroup0.setId((String) null);
      String string0 = quizGroup0.getId();
      assertNull(string0);
  }

  @Test(timeout = 4000)
  public void test06()  throws Throwable  {
      QuizGroup quizGroup0 = new QuizGroup();
      String string0 = quizGroup0.getGrandfather();
      assertNull(string0);
  }

  @Test(timeout = 4000)
  public void test07()  throws Throwable  {
      QuizGroupType quizGroupType0 = QuizGroupType.CAT;
      QuizGroup quizGroup0 = new QuizGroup("Sad][>hl-KF*", "aH0w%Uk%i0tpvET{'", "Sad][>hl-KF*", "aH0w%Uk%i0tpvET{'", "", quizGroupType0);
      quizGroup0.setGrandfather("");
      String string0 = quizGroup0.getGrandfather();
      assertEquals("", string0);
  }

  @Test(timeout = 4000)
  public void test08()  throws Throwable  {
      QuizGroupType quizGroupType0 = QuizGroupType.CAT;
      QuizGroup quizGroup0 = new QuizGroup("A3", quizGroupType0, "", "A3", "");
      String string0 = quizGroup0.getFather();
      assertEquals("", string0);
  }

  @Test(timeout = 4000)
  public void test09()  throws Throwable  {
      QuizGroupType quizGroupType0 = QuizGroupType.CAT;
      QuizGroup quizGroup0 = new QuizGroup("A3", quizGroupType0, "", "A3", "");
      quizGroup0.setTeacher("system.model.QuizGroupType");
  }

  @Test(timeout = 4000)
  public void test10()  throws Throwable  {
      QuizGroupType quizGroupType0 = QuizGroupType.CAT;
      QuizGroup quizGroup0 = new QuizGroup("A3", quizGroupType0, "", "A3", "");
      String string0 = quizGroup0.getGrandfather();
      assertEquals("A3", string0);
  }

  @Test(timeout = 4000)
  public void test11()  throws Throwable  {
      QuizGroupType quizGroupType0 = QuizGroupType.CAT;
      QuizGroup quizGroup0 = new QuizGroup("A3", quizGroupType0, "", "A3", "");
      QuizGroupType quizGroupType1 = quizGroup0.getType();
      assertSame(quizGroupType1, quizGroupType0);
  }

  @Test(timeout = 4000)
  public void test12()  throws Throwable  {
      QuizGroupType quizGroupType0 = QuizGroupType.CAT;
      QuizGroup quizGroup0 = new QuizGroup("A3", quizGroupType0, "", "A3", "");
      quizGroup0.setId("");
      String string0 = quizGroup0.getId();
      assertEquals("", string0);
  }

  @Test(timeout = 4000)
  public void test13()  throws Throwable  {
      QuizGroupType quizGroupType0 = QuizGroupType.CAT;
      QuizGroup quizGroup0 = new QuizGroup("A3", quizGroupType0, "", "A3", "");
      quizGroup0.setName("lW\"9?X$R!XfU}>d|");
      String string0 = quizGroup0.getName();
      assertEquals("lW\"9?X$R!XfU}>d|", string0);
  }

  @Test(timeout = 4000)
  public void test14()  throws Throwable  {
      QuizGroupType quizGroupType0 = QuizGroupType.CAT;
      QuizGroup quizGroup0 = new QuizGroup("A3", quizGroupType0, "", "A3", "");
      quizGroup0.setFather("lW\"9?X$R!XfU}>d|");
      String string0 = quizGroup0.getFather();
      assertEquals("lW\"9?X$R!XfU}>d|", string0);
  }

  @Test(timeout = 4000)
  public void test15()  throws Throwable  {
      QuizGroup quizGroup0 = new QuizGroup();
      String string0 = quizGroup0.getTeacher();
      assertNull(string0);
  }

  @Test(timeout = 4000)
  public void test16()  throws Throwable  {
      QuizGroupType quizGroupType0 = QuizGroupType.SUBSUBCAT;
      QuizGroup quizGroup0 = new QuizGroup("km#K&'", "", quizGroupType0, "", "km#K&'", "km#K&'");
      String string0 = quizGroup0.getTeacher();
      assertEquals("", string0);
  }

  @Test(timeout = 4000)
  public void test17()  throws Throwable  {
      QuizGroup quizGroup0 = new QuizGroup();
      String string0 = quizGroup0.getFather();
      assertNull(string0);
  }

  @Test(timeout = 4000)
  public void test18()  throws Throwable  {
      QuizGroup quizGroup0 = new QuizGroup();
      String string0 = quizGroup0.getId();
      assertEquals("00000000-0100-4000-8200-000003000000", string0);
  }

  @Test(timeout = 4000)
  public void test19()  throws Throwable  {
      QuizGroup quizGroup0 = new QuizGroup();
      String string0 = quizGroup0.getName();
      assertNull(string0);
  }

  @Test(timeout = 4000)
  public void test20()  throws Throwable  {
      QuizGroup quizGroup0 = new QuizGroup();
      QuizGroupType quizGroupType0 = QuizGroupType.SUBSUBCAT;
      quizGroup0.setType(quizGroupType0);
  }
}
