/*
 * This file was automatically generated by EvoSuite
 * Tue Dec 04 01:19:45 GMT 2018
 */

package system.model.quizzes;

import org.junit.Test;
import static org.junit.Assert.*;
import static org.evosuite.runtime.EvoAssertions.*;
import org.evosuite.runtime.EvoRunner;
import org.evosuite.runtime.EvoRunnerParameters;
import org.junit.runner.RunWith;

@RunWith(EvoRunner.class) @EvoRunnerParameters(mockJVMNonDeterminism = true, useVFS = true, useVNET = true, resetStaticState = true, separateClassLoader = true, useJEE = true) 
public class QuizPart_ESTest extends QuizPart_ESTest_scaffolding {

  @Test(timeout = 4000)
  public void test00()  throws Throwable  {
      Integer integer0 = new Integer((-750));
      Object object0 = QuizPart.__CLR4_1_28u8ujp8v54nr.lambdaInc((-750), integer0, 0);
      assertNotNull(object0);
  }

  @Test(timeout = 4000)
  public void test01()  throws Throwable  {
      QuizPart.__CLR4_1_28u8ujp8v54nr quizPart___CLR4_1_28u8ujp8v54nr0 = new QuizPart.__CLR4_1_28u8ujp8v54nr();
  }

  @Test(timeout = 4000)
  public void test02()  throws Throwable  {
      QuizPart quizPart0 = new QuizPart("'3A1I)<PiBCYU>", "", "", (-503), 0, "", "'3A1I)<PiBCYU>", "");
      String string0 = quizPart0.getSubsubcategory();
      assertEquals("", string0);
  }

  @Test(timeout = 4000)
  public void test03()  throws Throwable  {
      QuizPart quizPart0 = new QuizPart("'3A1I)<PiBCYU>", "", "", (-503), 0, "", "'3A1I)<PiBCYU>", "");
      String string0 = quizPart0.getSubcategory();
      assertEquals("'3A1I)<PiBCYU>", string0);
  }

  @Test(timeout = 4000)
  public void test04()  throws Throwable  {
      QuizPart quizPart0 = new QuizPart("$}:0W([;uWWAXc\";'-U", (String) null, 1, 1, "Hc<V", "", "Hc<V");
      String string0 = quizPart0.getSubcategory();
      assertNotNull(string0);
      assertEquals("", string0);
  }

  @Test(timeout = 4000)
  public void test05()  throws Throwable  {
      QuizPart quizPart0 = new QuizPart();
      String string0 = quizPart0.getQuiz();
      assertNull(string0);
  }

  @Test(timeout = 4000)
  public void test06()  throws Throwable  {
      QuizPart quizPart0 = new QuizPart("UcN03G#0JoHO^U!ric8", "UcN03G#0JoHO^U!ric8", "", (-534), (-534), "", "O-wNm-mZ{%c", "UcN03G#0JoHO^U!ric8");
      String string0 = quizPart0.getQuiz();
      assertEquals("", string0);
  }

  @Test(timeout = 4000)
  public void test07()  throws Throwable  {
      QuizPart quizPart0 = new QuizPart("$}:0W([;uWWAXc\";'-U", (String) null, 1, 1, "Hc<V", "", "Hc<V");
      int int0 = quizPart0.getOrder();
      assertEquals(1, int0);
  }

  @Test(timeout = 4000)
  public void test08()  throws Throwable  {
      QuizPart quizPart0 = new QuizPart();
      int int0 = quizPart0.getNumber();
      assertEquals(0, int0);
  }

  @Test(timeout = 4000)
  public void test09()  throws Throwable  {
      QuizPart quizPart0 = new QuizPart("$}:0W([;uWWAXc\";'-U", (String) null, 1, 1, "Hc<V", "", "Hc<V");
      int int0 = quizPart0.getNumber();
      assertEquals(1, int0);
  }

  @Test(timeout = 4000)
  public void test10()  throws Throwable  {
      QuizPart quizPart0 = new QuizPart();
      String string0 = quizPart0.getName();
      assertNull(string0);
  }

  @Test(timeout = 4000)
  public void test11()  throws Throwable  {
      QuizPart quizPart0 = new QuizPart("l^&g@", "g!lH8", (-2922), (-1782), "g!lH8", "l^&g@", "l^&g@");
      String string0 = quizPart0.getName();
      assertEquals("l^&g@", string0);
  }

  @Test(timeout = 4000)
  public void test12()  throws Throwable  {
      QuizPart quizPart0 = new QuizPart("'3A1I)<PiBCYU>", "", "", (-503), 0, "", "'3A1I)<PiBCYU>", "");
      quizPart0.setId((String) null);
      String string0 = quizPart0.getId();
      assertNull(string0);
  }

  @Test(timeout = 4000)
  public void test13()  throws Throwable  {
      QuizPart quizPart0 = new QuizPart();
      quizPart0.setId("");
      String string0 = quizPart0.getId();
      assertEquals("", string0);
  }

  @Test(timeout = 4000)
  public void test14()  throws Throwable  {
      QuizPart quizPart0 = new QuizPart("system.model.quizzes.QuizPart", "system.model.quizzes.QuizPart", "UU)", 0, 0, "UU)", "system.model.quizzes.QuizPart", "system.model.quizzes.QuizPart");
      String string0 = quizPart0.getCategory();
      assertEquals("UU)", string0);
  }

  @Test(timeout = 4000)
  public void test15()  throws Throwable  {
      QuizPart quizPart0 = new QuizPart("F+S&4", "", "", 0, 0, "", "", "");
      String string0 = quizPart0.getCategory();
      assertEquals("", string0);
  }

  @Test(timeout = 4000)
  public void test16()  throws Throwable  {
      QuizPart quizPart0 = null;
      try {
        quizPart0 = new QuizPart((QuizPart) null);
        fail("Expecting exception: NullPointerException");
      
      } catch(NullPointerException e) {
         //
         // no message in exception (getMessage() returned null)
         //
         verifyException("system.model.quizzes.QuizPart", e);
      }
  }

  @Test(timeout = 4000)
  public void test17()  throws Throwable  {
      QuizPart quizPart0 = new QuizPart("%9>t+~Q9j2)+LuF:/u6", "%9>t+~Q9j2)+LuF:/u6", "%9>t+~Q9j2)+LuF:/u6", (-2216), (-2216), "%9>t+~Q9j2)+LuF:/u6", "%9>t+~Q9j2)+LuF:/u6", "%9>t+~Q9j2)+LuF:/u6");
      QuizPart quizPart1 = new QuizPart(quizPart0);
      assertFalse(quizPart1.equals((Object)quizPart0));
  }

  @Test(timeout = 4000)
  public void test18()  throws Throwable  {
      QuizPart quizPart0 = new QuizPart();
      quizPart0.setCategory((String) null);
  }

  @Test(timeout = 4000)
  public void test19()  throws Throwable  {
      QuizPart quizPart0 = new QuizPart();
      String string0 = quizPart0.getSubcategory();
      assertNull(string0);
  }

  @Test(timeout = 4000)
  public void test20()  throws Throwable  {
      QuizPart quizPart0 = new QuizPart();
      quizPart0.setQuiz("shZ~LcZe");
  }

  @Test(timeout = 4000)
  public void test21()  throws Throwable  {
      QuizPart quizPart0 = new QuizPart();
      String string0 = quizPart0.getSubsubcategory();
      assertNull(string0);
  }

  @Test(timeout = 4000)
  public void test22()  throws Throwable  {
      QuizPart quizPart0 = new QuizPart();
      quizPart0.setOrder((-3910));
      int int0 = quizPart0.getOrder();
      assertEquals((-3910), int0);
  }

  @Test(timeout = 4000)
  public void test23()  throws Throwable  {
      QuizPart quizPart0 = new QuizPart("", "", (-143), (-143), "", "", "");
      int int0 = quizPart0.getNumber();
      assertEquals((-143), int0);
  }

  @Test(timeout = 4000)
  public void test24()  throws Throwable  {
      QuizPart quizPart0 = new QuizPart("%9>t+~Q9j2)+LuF:/u6", "%9>t+~Q9j2)+LuF:/u6", "%9>t+~Q9j2)+LuF:/u6", (-2216), (-2216), "%9>t+~Q9j2)+LuF:/u6", "%9>t+~Q9j2)+LuF:/u6", "%9>t+~Q9j2)+LuF:/u6");
      quizPart0.setName("%9>t+~Q9j2)+LuF:/u6");
  }

  @Test(timeout = 4000)
  public void test25()  throws Throwable  {
      QuizPart quizPart0 = new QuizPart();
      int int0 = quizPart0.getOrder();
      assertEquals(0, int0);
  }

  @Test(timeout = 4000)
  public void test26()  throws Throwable  {
      QuizPart quizPart0 = new QuizPart();
      quizPart0.setSubsubcategory("04000000-0500-4000-8600-000007000000");
      String string0 = quizPart0.getSubsubcategory();
      assertEquals("04000000-0500-4000-8600-000007000000", string0);
  }

  @Test(timeout = 4000)
  public void test27()  throws Throwable  {
      QuizPart quizPart0 = new QuizPart("%9>t+~Q9j2)+LuF:/u6", "%9>t+~Q9j2)+LuF:/u6", "%9>t+~Q9j2)+LuF:/u6", (-2216), (-2216), "%9>t+~Q9j2)+LuF:/u6", "%9>t+~Q9j2)+LuF:/u6", "%9>t+~Q9j2)+LuF:/u6");
      String string0 = quizPart0.getQuiz();
      assertEquals("%9>t+~Q9j2)+LuF:/u6", string0);
  }

  @Test(timeout = 4000)
  public void test28()  throws Throwable  {
      QuizPart quizPart0 = new QuizPart("", "", (-143), (-143), "", "", "");
      String string0 = quizPart0.getName();
      assertEquals("", string0);
  }

  @Test(timeout = 4000)
  public void test29()  throws Throwable  {
      QuizPart quizPart0 = new QuizPart();
      String string0 = quizPart0.changeId();
      assertEquals("04000000-0500-4000-8600-000007000000", string0);
  }

  @Test(timeout = 4000)
  public void test30()  throws Throwable  {
      QuizPart quizPart0 = new QuizPart();
      quizPart0.setSubcategory((String) null);
  }

  @Test(timeout = 4000)
  public void test31()  throws Throwable  {
      QuizPart quizPart0 = new QuizPart();
      quizPart0.setNumber((-3910));
  }

  @Test(timeout = 4000)
  public void test32()  throws Throwable  {
      QuizPart quizPart0 = new QuizPart("", "", (-143), (-143), "", "", "");
      String string0 = quizPart0.getId();
      assertEquals("00000000-0100-4000-8200-000003000000", string0);
  }

  @Test(timeout = 4000)
  public void test33()  throws Throwable  {
      QuizPart quizPart0 = new QuizPart();
      String string0 = quizPart0.getCategory();
      assertNull(string0);
  }
}
