/*
 * This file was automatically generated by EvoSuite
 * Tue Dec 04 01:26:31 GMT 2018
 */

package system.model.quizzes;

import org.junit.Test;
import static org.junit.Assert.*;
import static org.evosuite.runtime.EvoAssertions.*;
import java.util.LinkedList;
import org.evosuite.runtime.EvoRunner;
import org.evosuite.runtime.EvoRunnerParameters;
import org.junit.runner.RunWith;

@RunWith(EvoRunner.class) @EvoRunnerParameters(mockJVMNonDeterminism = true, useVFS = true, useVNET = true, resetStaticState = true, separateClassLoader = true, useJEE = true) 
public class Quiz_ESTest extends Quiz_ESTest_scaffolding {

  @Test(timeout = 4000)
  public void test00()  throws Throwable  {
      Quiz.__CLR4_1_2y0y0jp8v55a8.lambdaInc((-387), (Object) "OxE1$sG6?-J,#V", (-387));
  }

  @Test(timeout = 4000)
  public void test01()  throws Throwable  {
      Quiz.__CLR4_1_2y0y0jp8v55a8 quiz___CLR4_1_2y0y0jp8v55a8_0 = new Quiz.__CLR4_1_2y0y0jp8v55a8();
  }

  @Test(timeout = 4000)
  public void test02()  throws Throwable  {
      Quiz quiz0 = new Quiz((String) null, "", "", (String) null, "sJ");
      LinkedList<QuizPart> linkedList0 = quiz0.getParts();
      Quiz quiz1 = new Quiz((String) null, "sJ", "sJ", (String) null, "sJ", "sJ", 966L, linkedList0);
      quiz1.getTime();
  }

  @Test(timeout = 4000)
  public void test03()  throws Throwable  {
      Quiz quiz0 = new Quiz("", "", "A:s{\"%^Kj3N%Q B]", "A:s{\"%^Kj3N%Q B]", "(n{r| -< u_CI-$Q-R", "system.model.quizzes.Quiz");
      quiz0.setTime((-1L));
      long long0 = quiz0.getTime();
      assertEquals((-1L), long0);
  }

  @Test(timeout = 4000)
  public void test04()  throws Throwable  {
      Quiz quiz0 = new Quiz();
      String string0 = quiz0.getTeacher();
      assertNull(string0);
  }

  @Test(timeout = 4000)
  public void test05()  throws Throwable  {
      Quiz quiz0 = new Quiz((String) null, "", "", (String) null, "sJ");
      String string0 = quiz0.getTeacher();
      assertEquals("", string0);
      assertNotNull(string0);
  }

  @Test(timeout = 4000)
  public void test06()  throws Throwable  {
      Quiz quiz0 = new Quiz();
      String string0 = quiz0.getSubsubcategory();
      assertNull(string0);
  }

  @Test(timeout = 4000)
  public void test07()  throws Throwable  {
      Quiz quiz0 = new Quiz("KuF", "KuF", "", "5+z$J\"/'0D\"6", ".");
      String string0 = quiz0.getSubsubcategory();
      assertEquals(".", string0);
  }

  @Test(timeout = 4000)
  public void test08()  throws Throwable  {
      Quiz quiz0 = new Quiz((String) null, "", "", (String) null, "sJ");
      String string0 = quiz0.getSubcategory();
      assertNull(string0);
  }

  @Test(timeout = 4000)
  public void test09()  throws Throwable  {
      Quiz quiz0 = new Quiz("", "", "", "", "", ")(_!uD|LO~");
      String string0 = quiz0.getSubcategory();
      assertEquals("", string0);
  }

  @Test(timeout = 4000)
  public void test10()  throws Throwable  {
      Quiz quiz0 = new Quiz("4Dk`.", "4Dk`.", (String) null, "ev6vyy|U", "Cb&M]G");
      quiz0.setParts((LinkedList<QuizPart>) null);
      LinkedList<QuizPart> linkedList0 = quiz0.getParts();
      assertNull(linkedList0);
  }

  @Test(timeout = 4000)
  public void test11()  throws Throwable  {
      Quiz quiz0 = new Quiz("KuF", "KuF", "", "5+z$J\"/'0D\"6", ".");
      String string0 = quiz0.getName();
      assertEquals("KuF", string0);
  }

  @Test(timeout = 4000)
  public void test12()  throws Throwable  {
      Quiz quiz0 = new Quiz("", "", "", "", "", ")(_!uD|LO~");
      String string0 = quiz0.getName();
      assertEquals("", string0);
  }

  @Test(timeout = 4000)
  public void test13()  throws Throwable  {
      Quiz quiz0 = new Quiz((String) null, "", "", (String) null, "sJ");
      LinkedList<QuizPart> linkedList0 = quiz0.getParts();
      Quiz quiz1 = new Quiz((String) null, "sJ", "sJ", (String) null, "sJ", "sJ", 966L, linkedList0);
      String string0 = quiz1.getId();
      assertNull(string0);
  }

  @Test(timeout = 4000)
  public void test14()  throws Throwable  {
      Quiz quiz0 = new Quiz("", "", "", "", "", ")(_!uD|LO~");
      String string0 = quiz0.getId();
      assertEquals("", string0);
  }

  @Test(timeout = 4000)
  public void test15()  throws Throwable  {
      Quiz quiz0 = new Quiz((String) null, "", "", (String) null, "sJ");
      LinkedList<QuizPart> linkedList0 = quiz0.getParts();
      Quiz quiz1 = new Quiz((String) null, "sJ", "sJ", (String) null, "sJ", "sJ", 966L, linkedList0);
      String string0 = quiz1.getCategory();
      assertNull(string0);
  }

  @Test(timeout = 4000)
  public void test16()  throws Throwable  {
      Quiz quiz0 = new Quiz("", "", "", "", "", ")(_!uD|LO~");
      String string0 = quiz0.getCategory();
      assertEquals("", string0);
  }

  @Test(timeout = 4000)
  public void test17()  throws Throwable  {
      Quiz quiz0 = null;
      try {
        quiz0 = new Quiz((Quiz) null);
        fail("Expecting exception: NullPointerException");
      
      } catch(NullPointerException e) {
         //
         // no message in exception (getMessage() returned null)
         //
         verifyException("system.model.quizzes.Quiz", e);
      }
  }

  @Test(timeout = 4000)
  public void test18()  throws Throwable  {
      Quiz quiz0 = new Quiz("", "", "", "", "");
      LinkedList<QuizPart> linkedList0 = quiz0.getParts();
      Quiz quiz1 = new Quiz("", "", "", "", "", (-17L), linkedList0);
      assertFalse(quiz1.equals((Object)quiz0));
  }

  @Test(timeout = 4000)
  public void test19()  throws Throwable  {
      Quiz quiz0 = new Quiz(")KmU,0L %9", ")KmU,0L %9", ")KmU,0L %9", ")KmU,0L %9", ")KmU,0L %9", ")KmU,0L %9");
      String string0 = quiz0.getSubcategory();
      assertEquals(")KmU,0L %9", string0);
  }

  @Test(timeout = 4000)
  public void test20()  throws Throwable  {
      Quiz quiz0 = new Quiz(")KmU,0L %9", ")KmU,0L %9", ")KmU,0L %9", ")KmU,0L %9", ")KmU,0L %9", ")KmU,0L %9");
      quiz0.setTeacher(")KmU,0L %9");
  }

  @Test(timeout = 4000)
  public void test21()  throws Throwable  {
      Quiz quiz0 = new Quiz(")KmU,0L %9", ")KmU,0L %9", ")KmU,0L %9", ")KmU,0L %9", ")KmU,0L %9", ")KmU,0L %9");
      quiz0.setSubsubcategory(")KmU,0L %9");
  }

  @Test(timeout = 4000)
  public void test22()  throws Throwable  {
      Quiz quiz0 = new Quiz();
      String string0 = quiz0.getName();
      assertNull(string0);
  }

  @Test(timeout = 4000)
  public void test23()  throws Throwable  {
      Quiz quiz0 = new Quiz(")KmU,0L %9", ")KmU,0L %9", ")KmU,0L %9", ")KmU,0L %9", ")KmU,0L %9", ")KmU,0L %9");
      String string0 = quiz0.changeId();
      assertEquals("00000000-0100-4000-8200-000003000000", string0);
  }

  @Test(timeout = 4000)
  public void test24()  throws Throwable  {
      Quiz quiz0 = new Quiz();
      quiz0.setSubcategory((String) null);
  }

  @Test(timeout = 4000)
  public void test25()  throws Throwable  {
      Quiz quiz0 = new Quiz("", "", "", "", "");
      Quiz quiz1 = new Quiz(quiz0);
      assertFalse(quiz1.equals((Object)quiz0));
  }

  @Test(timeout = 4000)
  public void test26()  throws Throwable  {
      Quiz quiz0 = new Quiz(")KmU,0L %9", ")KmU,0L %9", ")KmU,0L %9", ")KmU,0L %9", ")KmU,0L %9", ")KmU,0L %9");
      String string0 = quiz0.getTeacher();
      assertEquals(")KmU,0L %9", string0);
  }

  @Test(timeout = 4000)
  public void test27()  throws Throwable  {
      Quiz quiz0 = new Quiz("", "", "", "", "");
      String string0 = quiz0.getSubsubcategory();
      assertEquals("", string0);
  }

  @Test(timeout = 4000)
  public void test28()  throws Throwable  {
      Quiz quiz0 = new Quiz(")KmU,0L %9", ")KmU,0L %9", ")KmU,0L %9", ")KmU,0L %9", ")KmU,0L %9", ")KmU,0L %9");
      long long0 = quiz0.getTime();
      assertEquals(0L, long0);
  }

  @Test(timeout = 4000)
  public void test29()  throws Throwable  {
      Quiz quiz0 = new Quiz("", "", "", "", "");
      quiz0.setName("");
  }

  @Test(timeout = 4000)
  public void test30()  throws Throwable  {
      Quiz quiz0 = new Quiz("", "", "", "", "");
      String string0 = quiz0.getId();
      assertEquals("00000000-0100-4000-8200-000003000000", string0);
  }

  @Test(timeout = 4000)
  public void test31()  throws Throwable  {
      Quiz quiz0 = new Quiz(")KmU,0L %9", ")KmU,0L %9", ")KmU,0L %9", ")KmU,0L %9", ")KmU,0L %9", ")KmU,0L %9");
      String string0 = quiz0.getCategory();
      assertEquals(")KmU,0L %9", string0);
  }

  @Test(timeout = 4000)
  public void test32()  throws Throwable  {
      Quiz quiz0 = new Quiz(")KmU,0L %9", ")KmU,0L %9", ")KmU,0L %9", ")KmU,0L %9", ")KmU,0L %9", ")KmU,0L %9");
      quiz0.setId(")KmU,0L %9");
  }

  @Test(timeout = 4000)
  public void test33()  throws Throwable  {
      Quiz quiz0 = new Quiz();
      quiz0.setCategory("L1#3Bw N}7d*fi'");
  }
}
