@startuml

title __QUIZZES's Class Diagram__\n

  package system.model {
    package system.model.quizzes {
      class QuizGroup_ESTest {
          + test00()
          + test01()
          + test02()
          + test03()
          + test04()
          + test05()
          + test06()
          + test07()
          + test08()
          + test09()
          + test10()
          + test11()
          + test12()
          + test13()
          + test14()
          + test15()
          + test16()
          + test17()
          + test18()
          + test19()
          + test20()
      }
    }
  }
  

  package system.model {
    package system.model.quizzes {
      class QuizGroup_ESTest_scaffolding {
          + nfr : NonFunctionalRequirementRule
          {static} - defaultProperties : Properties
          - threadStopper : ThreadStopper
          {static} + initEvoSuiteFramework()
          {static} + clearEvoSuiteFramework()
          + initTestCase()
          + doneWithTestCase()
          {static} + setSystemProperties()
          {static} - initializeClasses()
          {static} - resetClasses()
      }
    }
  }
  

  package system.model {
    package system.model.quizzes {
      class QuizPart_ESTest {
          + test00()
          + test01()
          + test02()
          + test03()
          + test04()
          + test05()
          + test06()
          + test07()
          + test08()
          + test09()
          + test10()
          + test11()
          + test12()
          + test13()
          + test14()
          + test15()
          + test16()
          + test17()
          + test18()
          + test19()
          + test20()
          + test21()
          + test22()
          + test23()
          + test24()
          + test25()
          + test26()
          + test27()
          + test28()
          + test29()
          + test30()
          + test31()
          + test32()
          + test33()
      }
    }
  }
  

  package system.model {
    package system.model.quizzes {
      class QuizPart_ESTest_scaffolding {
          + nfr : NonFunctionalRequirementRule
          {static} - defaultProperties : Properties
          - threadStopper : ThreadStopper
          {static} + initEvoSuiteFramework()
          {static} + clearEvoSuiteFramework()
          + initTestCase()
          + doneWithTestCase()
          {static} + setSystemProperties()
          {static} - initializeClasses()
          {static} - resetClasses()
      }
    }
  }
  

  package system.model {
    package system.model.quizzes {
      class Quiz_ESTest {
          + test00()
          + test01()
          + test02()
          + test03()
          + test04()
          + test05()
          + test06()
          + test07()
          + test08()
          + test09()
          + test10()
          + test11()
          + test12()
          + test13()
          + test14()
          + test15()
          + test16()
          + test17()
          + test18()
          + test19()
          + test20()
          + test21()
          + test22()
          + test23()
          + test24()
          + test25()
          + test26()
          + test27()
          + test28()
          + test29()
          + test30()
          + test31()
          + test32()
          + test33()
      }
    }
  }
  

  package system.model {
    package system.model.quizzes {
      class Quiz_ESTest_scaffolding {
          + nfr : NonFunctionalRequirementRule
          {static} - defaultProperties : Properties
          - threadStopper : ThreadStopper
          {static} + initEvoSuiteFramework()
          {static} + clearEvoSuiteFramework()
          + initTestCase()
          + doneWithTestCase()
          {static} + setSystemProperties()
          {static} - initializeClasses()
          {static} - resetClasses()
      }
    }
  }
  

  QuizGroup_ESTest -up-|> QuizGroup_ESTest_scaffolding
  QuizPart_ESTest -up-|> QuizPart_ESTest_scaffolding
  Quiz_ESTest -up-|> Quiz_ESTest_scaffolding


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
